--- a/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningLevel>0</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
