--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -17,12 +17,12 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-    - name: Install dependencies
-      run: dotnet restore
+    - name: Install dependencies for AutoVersionsDB.Core
+      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj
     - name: Build AutoVersionsDB.Core
       run: dotnet build src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj -c debug
+    - name: Install dependencies for AutoVersionsDB.WinApp
+      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.WinApp\AutoVersionsDB.WinApp.csproj    
     - name: Build AutoVersionsDB.WinApp
       run: dotnet build src\AutoVersionsDB\AutoVersionsDB.WinApp\AutoVersionsDB.WinApp.csproj -c debug
-#    - name: Build 
-#      run: build2.cmd
-   
+
