add run tests to develop push automation

--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -25,4 +25,6 @@ jobs:
       run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.WinApp\AutoVersionsDB.WinApp.csproj    
     - name: Build AutoVersionsDB.WinApp
       run: dotnet build src\AutoVersionsDB\AutoVersionsDB.WinApp\AutoVersionsDB.WinApp.csproj -c debug
+    - name: Run Integration Tests
+      run: dotnet test src\AutoVersionsDB\AutoVersionsDB.Core.IntegrationTests\AutoVersionsDB.Core.IntegrationTests.csproj
 
