--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -17,6 +17,16 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune --unshallow
+    - name: Use GitVersion
+      id: gitversion # step id used as reference for output values
+      uses: gittools/actions/gitversion/execute@v0.9.2
+    - run: |
+       echo "Major: ${{ steps.gitversion.outputs.major }}"
+       echo "Minor: ${{ steps.gitversion.outputs.minor }}"
+       echo "Patch: ${{ steps.gitversion.outputs.patch }}"
+      name: Output
     - name: Install dependencies for AutoVersionsDB.Core
       run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj
     - name: Build AutoVersionsDB.Core
