--- a/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
@@ -269,6 +269,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MartinCostello.SqlLocalDb" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.11.1" />
