--- a/src/AutoVersionsDB/.editorconfig
+++ b/src/AutoVersionsDB/.editorconfig
@@ -5,3 +5,6 @@ dotnet_diagnostic.CA1303.severity = none
 
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = none
+
+# IDE1006: Naming Styles
+dotnet_diagnostic.IDE1006.severity = none
