--- a/src/AutoVersionsDB/AutoVersionsDB.DbCommands.SqlServer/AutoVersionsDB.DbCommands.SqlServer.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DbCommands.SqlServer/AutoVersionsDB.DbCommands.SqlServer.csproj
@@ -32,6 +32,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
