Handle FxCopAnalyzer for all projects

--- a/src/AutoVersionsDB/.editorconfig
+++ b/src/AutoVersionsDB/.editorconfig
@@ -8,3 +8,9 @@ dotnet_diagnostic.CA1822.severity = none
 
 # IDE1006: Naming Styles
 dotnet_diagnostic.IDE1006.severity = none
+
+# CA1031: Do not catch general exception types
+dotnet_diagnostic.CA1031.severity = none
+
+# IDE0063: Use simple 'using' statement
+csharp_prefer_simple_using_statement = true:none
