--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/AutoVersionsDB.WinApp.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/AutoVersionsDB.WinApp.csproj
@@ -6,6 +6,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>AppIcon.ico</ApplicationIcon>
     <Platforms>AnyCPU;x64;x86</Platforms>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -36,9 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="ProjectItemControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Update="ProjectItemControl.cs" />
     <Compile Update="ProjectItemControl.Designer.cs">
       <DependentUpon>ProjectItemControl.cs</DependentUpon>
     </Compile>
