--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp.Designer/AutoVersionsDB.WinApp.Designer.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp.Designer/AutoVersionsDB.WinApp.Designer.csproj
@@ -261,6 +261,7 @@
     <Content Include="Resources\historyIcon.png" />
     <Content Include="Resources\plus32.png" />
     <Content Include="Resources\SaveIcon.png" />
+    <Content Include="Resources\Spinner3_32.gif" />
     <Content Include="Resources\VirtualExecution2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
