introduce AutoVersionsDB.Common

--- a/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
@@ -286,6 +286,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj" />
   </ItemGroup>
 
