--- a/src/AutoVersionsDB/AutoVersionsDB.DbCommands.Integration/AutoVersionsDB.DbCommands.Integration.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DbCommands.Integration/AutoVersionsDB.DbCommands.Integration.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.DbCommands.Contract\AutoVersionsDB.DbCommands.Contract.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.DbCommands.SqlServer\AutoVersionsDB.DbCommands.SqlServer.csproj" />
   </ItemGroup>
