--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp.Designer/AutoVersionsDB.WinApp.Designer.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp.Designer/AutoVersionsDB.WinApp.Designer.csproj
@@ -97,11 +97,9 @@
     </Compile>
     <Compile Include="..\AutoVersionsDB.WinApp\ProjectItemControl.cs">
       <Link>ProjectItemControl.cs</Link>
-      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="..\AutoVersionsDB.WinApp\ProjectItemControl.Designer.cs">
       <Link>ProjectItemControl.Designer.cs</Link>
-      <DependentUpon>ProjectItemControl.cs</DependentUpon>
     </Compile>
     <Compile Include="..\AutoVersionsDB.WinApp\Properties\Resources.Designer.cs">
       <Link>Properties\Resources.Designer.cs</Link>
@@ -113,9 +111,6 @@
     <Compile Include="..\AutoVersionsDB.WinApp\TextInputWindow.Designer.cs">
       <Link>TextInputWindow.Designer.cs</Link>
       <DependentUpon>TextInputWindow.cs</DependentUpon>
-    </Compile>
-    <Compile Include="..\AutoVersionsDB.WinApp\Utils\ExceptionsUtils.cs">
-      <Link>Utils\ExceptionsUtils.cs</Link>
     </Compile>
     <Compile Include="..\AutoVersionsDB.WinApp\Utils\OsProcessUtils.cs">
       <Link>Utils\OsProcessUtils.cs</Link>
@@ -148,7 +143,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="..\AutoVersionsDB.WinApp\ProjectItemControl.resx">
       <Link>ProjectItemControl.resx</Link>
-      <DependentUpon>ProjectItemControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="..\AutoVersionsDB.WinApp\Properties\Resources.resx">
       <Link>Properties\Resources.resx</Link>
@@ -176,6 +170,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj">
+      <Project>{87f9c789-bc33-4371-a367-70b37c2912ac}</Project>
+      <Name>AutoVersionsDB.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj">
       <Project>{D8E93FE9-2EBA-4A49-B713-899E45402AEA}</Project>
       <Name>AutoVersionsDB.Core</Name>
