--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/AutoVersionsDB.WinApp.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/AutoVersionsDB.WinApp.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj" />
   </ItemGroup>
 
