--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp/AutoVersionsDB.ConsoleApp.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp/AutoVersionsDB.ConsoleApp.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="GitVersionTask" Version="5.3.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
