change project name from AutoVersionsDB.Common to AutoVersionsDB.Helpers

--- a/src/AutoVersionsDB/AutoVersionsDB.DbCommands.Contract/AutoVersionsDB.DbCommands.Contract.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DbCommands.Contract/AutoVersionsDB.DbCommands.Contract.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj" />
+    <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
