--- a/src/AutoVersionsDB/AutoVersionsDB.DbCommands.Integration/AutoVersionsDB.DbCommands.Integration.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DbCommands.Integration/AutoVersionsDB.DbCommands.Integration.csproj
@@ -29,9 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.DbCommands.Contract\AutoVersionsDB.DbCommands.Contract.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.DbCommands.SqlServer\AutoVersionsDB.DbCommands.SqlServer.csproj" />
+    <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
