--- a/src/AutoVersionsDB/AutoVersionsDB.DbCommands.SqlServer/AutoVersionsDB.DbCommands.SqlServer.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DbCommands.SqlServer/AutoVersionsDB.DbCommands.SqlServer.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.DbCommands.Contract\AutoVersionsDB.DbCommands.Contract.csproj" />
+    <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
