--- a/src/AutoVersionsDB/AutoVersionsDB.NotificationableEngine/AutoVersionsDB.NotificationableEngine.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.NotificationableEngine/AutoVersionsDB.NotificationableEngine.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj" />
+    <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
