--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp.Designer/AutoVersionsDB.WinApp.Designer.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp.Designer/AutoVersionsDB.WinApp.Designer.csproj
@@ -97,7 +97,7 @@
     </Compile>
     <Compile Include="..\AutoVersionsDB.WinApp\ProjectItemControl.cs">
       <Link>ProjectItemControl.cs</Link>
-	<SubType>Form</SubType>	  
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="..\AutoVersionsDB.WinApp\ProjectItemControl.Designer.cs">
       <Link>ProjectItemControl.Designer.cs</Link>
@@ -173,10 +173,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AutoVersionsDB.Common\AutoVersionsDB.Common.csproj">
-      <Project>{87f9c789-bc33-4371-a367-70b37c2912ac}</Project>
-      <Name>AutoVersionsDB.Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj">
       <Project>{D8E93FE9-2EBA-4A49-B713-899E45402AEA}</Project>
       <Name>AutoVersionsDB.Core</Name>
@@ -188,6 +184,10 @@
     <ProjectReference Include="..\AutoVersionsDB.DbCommands.Integration\AutoVersionsDB.DbCommands.Integration.csproj">
       <Project>{3D0091E6-44EB-474B-A77D-53DC984F5E88}</Project>
       <Name>AutoVersionsDB.DbCommands.Integration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj">
+      <Project>{06a9844c-f76f-4f6e-9e65-0f84b3fc8733}</Project>
+      <Name>AutoVersionsDB.Helpers</Name>
     </ProjectReference>
     <ProjectReference Include="..\AutoVersionsDB.NotificationableEngine\AutoVersionsDB.NotificationableEngine.csproj">
       <Project>{38CCA5D1-3F7E-4282-8649-75990F1AF1E8}</Project>
