--- a/src/AutoVersionsDB/AutoVersionsDB.Helpers/AutoVersionsDB.Helpers.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.Helpers/AutoVersionsDB.Helpers.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GitVersionTask" Version="5.3.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
