--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp/AutoVersionsDB.ConsoleApp.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp/AutoVersionsDB.ConsoleApp.csproj
@@ -10,6 +10,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20371.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj" />
+    <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
