--- a/src/AutoVersionsDB/AutoVersionsDB.Core/AutoVersionsDB.Core.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.Core/AutoVersionsDB.Core.csproj
@@ -36,6 +36,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Ninject" Version="3.3.4" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20371.2" />
   </ItemGroup>
 
   <ItemGroup>
