--- a/src/AutoVersionsDB/AutoVersionsDB.Helpers/AutoVersionsDB.Helpers.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.Helpers/AutoVersionsDB.Helpers.csproj
@@ -10,6 +10,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20371.2" />
   </ItemGroup>
 
 </Project>
