+ test for project config validations

--- a/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.Core.IntegrationTests/AutoVersionsDB.Core.IntegrationTests.csproj
@@ -285,4 +285,8 @@
     <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DBVersionsTests\TestDefinitions\DeliveryEnv_Validations\" />
+  </ItemGroup>
+
 </Project>
