--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/AutoVersionsDB.WinApp.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/AutoVersionsDB.WinApp.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj" />
     <ProjectReference Include="..\AutoVersionsDB.Helpers\AutoVersionsDB.Helpers.csproj" />
+    <ProjectReference Include="..\AutoVersionsDB.UI\AutoVersionsDB.UI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
