--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.2
-   #   with:
-   #     versionSpec: '5.5.x'
+      uses: gittools/actions/gitversion/setup@v5
+      with:
+        versionSpec: '5.5.x'
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
