--- a/src/AutoVersionsDB/AutoVersionsDB.UI/AutoVersionsDB.UI.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.UI/AutoVersionsDB.UI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <OutputType>Library</OutputType>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
