--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp/AutoVersionsDB.ConsoleApp.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp/AutoVersionsDB.ConsoleApp.csproj
@@ -4,6 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Platforms>AnyCPU;x64;x86</Platforms>
+    <SignAssembly>false</SignAssembly>
+    <AssemblyOriginatorKeyFile>avdbKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyName>avdb</AssemblyName>
+    <RootNamespace>avdb</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
