--- a/src/AutoVersionsDB/AutoVersionsDB.DbCommands.SqlServer/AutoVersionsDB.DbCommands.SqlServer.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DbCommands.SqlServer/AutoVersionsDB.DbCommands.SqlServer.csproj
@@ -19,45 +19,45 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="SystemScripts\AppendDBFilesScript_SqlServer.sql" />
-    <None Remove="SystemScripts\BackupDB_SqlServer.sql" />
-    <None Remove="SystemScripts\CheckIfStoredProcedureExist_SqlServer.sql" />
-    <None Remove="SystemScripts\CheckIfTableExist_SqlServer.sql" />
-    <None Remove="SystemScripts\CreateDB_SqlServer.sql" />
-    <None Remove="SystemScripts\DropAllDbObjects_SqlServer.sql" />
-    <None Remove="SystemScripts\DropDB_SqlServer.sql" />
-    <None Remove="SystemScripts\GetAllDBTablesExceptSchema_SqlServer.sql" />
-    <None Remove="SystemScripts\GetAllTableData_SqlServer.sql" />
-    <None Remove="SystemScripts\GetDBAccessState_SqlServer.sql" />
-    <None Remove="SystemScripts\GetDBSessions_SqlServer.sql" />
-    <None Remove="SystemScripts\GetEmptyTable_SqlServer.sql" />
-    <None Remove="SystemScripts\GetExecutedFilesFromDBByFileTypeCode_SqlServer.sql" />
-    <None Remove="SystemScripts\GetIsDBExsit_SqlServer.sql" />
-    <None Remove="SystemScripts\KillSession_SqlServer.sql" />
-    <None Remove="SystemScripts\MoveDBFilesScript_SqlServer.sql" />
-    <None Remove="SystemScripts\RecreateDBVersionsSchema_SqlServer.sql" />
-    <None Remove="SystemScripts\RestorDB_SqlServer.sql" />
+    <None Remove="DBScripts\AppendDBFilesScript.sql" />
+    <None Remove="DBScripts\BackupDB.sql" />
+    <None Remove="DBScripts\CheckIfStoredProcedureExist.sql" />
+    <None Remove="DBScripts\CheckIfTableExist.sql" />
+    <None Remove="DBScripts\CreateDB.sql" />
+    <None Remove="DBScripts\DropAllDbObjects.sql" />
+    <None Remove="DBScripts\DropDB.sql" />
+    <None Remove="DBScripts\GetAllDBTablesExceptSchema.sql" />
+    <None Remove="DBScripts\GetAllTableData.sql" />
+    <None Remove="DBScripts\GetDBAccessState.sql" />
+    <None Remove="DBScripts\GetDBSessions.sql" />
+    <None Remove="DBScripts\GetEmptyTable.sql" />
+    <None Remove="DBScripts\GetExecutedFilesFromDBByFileTypeCode.sql" />
+    <None Remove="DBScripts\GetIsDBExsit.sql" />
+    <None Remove="DBScripts\KillSession.sql" />
+    <None Remove="DBScripts\MoveDBFilesScript.sql" />
+    <None Remove="DBScripts\RecreateDBVersionsSchema.sql" />
+    <None Remove="DBScripts\RestorDB.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="SystemScripts\AppendDBFilesScript_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\MoveDBFilesScript_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\GetExecutedFilesFromDBByFileTypeCode_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\GetEmptyTable_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\CheckIfTableExist_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\CheckIfStoredProcedureExist_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\GetAllTableData_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\GetAllDBTablesExceptSchema_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\GetIsDBExsit_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\CreateDB_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\DropDB_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\KillSession_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\GetDBSessions_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\GetDBAccessState_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\RestorDB_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\DropAllDbObjects_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\BackupDB_SqlServer.sql" />
-    <EmbeddedResource Include="SystemScripts\RecreateDBVersionsSchema_SqlServer.sql" />
+    <EmbeddedResource Include="DBScripts\AppendDBFilesScript.sql" />
+    <EmbeddedResource Include="DBScripts\MoveDBFilesScript.sql" />
+    <EmbeddedResource Include="DBScripts\GetExecutedFilesFromDBByFileTypeCode.sql" />
+    <EmbeddedResource Include="DBScripts\GetEmptyTable.sql" />
+    <EmbeddedResource Include="DBScripts\CheckIfTableExist.sql" />
+    <EmbeddedResource Include="DBScripts\CheckIfStoredProcedureExist.sql" />
+    <EmbeddedResource Include="DBScripts\GetAllTableData.sql" />
+    <EmbeddedResource Include="DBScripts\GetAllDBTablesExceptSchema.sql" />
+    <EmbeddedResource Include="DBScripts\GetIsDBExsit.sql" />
+    <EmbeddedResource Include="DBScripts\CreateDB.sql" />
+    <EmbeddedResource Include="DBScripts\DropDB.sql" />
+    <EmbeddedResource Include="DBScripts\KillSession.sql" />
+    <EmbeddedResource Include="DBScripts\GetDBSessions.sql" />
+    <EmbeddedResource Include="DBScripts\GetDBAccessState.sql" />
+    <EmbeddedResource Include="DBScripts\RestorDB.sql" />
+    <EmbeddedResource Include="DBScripts\DropAllDbObjects.sql" />
+    <EmbeddedResource Include="DBScripts\BackupDB.sql" />
+    <EmbeddedResource Include="DBScripts\RecreateDBVersionsSchema.sql" />
   </ItemGroup>
 
   <ItemGroup>
